# A2DVI-Firmware

./: .gitattributes  .gitignore  LICENSE  README.md
_BUILD/: Makefile  README.txt
configutil/: A2DVICONFIG.BAS  A2DVICONFIG_DOS33.dsk  A2DVICONFIG_PRODOS.po  Makefile  README.md
configutil/templates/: DOS3.3_MASTER.dsk  ProDOS.po
doc/: Installation.md
firmware/: CMakeLists.txt  copy_to_ram_custom.ld  main.c
firmware/applebus/: abus.c  abus.h  abus.pio  abus_pin_config.h  abus_setup.c  abus_setup.h  buffers.c  buffers.h  businterface.c  businterface.h
firmware/cmake/: pico_sdk_import.cmake
firmware/config/: config.c  config.h  device_regs.c  device_regs.h
firmware/debug/: debug.c  debug.h  profiler.h
firmware/dvi/: a2dvi.c  a2dvi.h  dvi_pin_config.h  hires_color_patterns_tmds.h  render.c  render.h  render_dgr.c  render_hires.c  render_lores.c  render_text.c  tmds.c  tmds.h  tmds_dhgr.c  tmds_hires.c  tmds_lores.c
firmware/fonts/: A2e_US_Enhanced.h  file2header.py  iie_de_enhanced.c  textfont.c  textfont.h
firmware/fonts/videx/: videx_apl.c  videx_epson.c  videx_french.c  videx_german.c  videx_inverse.c  videx_katakana.c  videx_normal.c  videx_spanish.c  videx_super_sub.c  videx_symbol.c  videx_uppercase.c
firmware/libraries/libdvi/: dvi.c  dvi_serialiser.c
firmware/menu/: menu.c  menu.h
firmware/render/: dhgr_patterns.h  hires_dot_patterns.h  render.c  render.h  render_debug.c  render_dgr.c  render_dhgr.c  render_hires.c  render_lores.c  render_splash.c  render_status.c  render_text.c  render_videx.c
firmware/scripts/: copy_to_ram_custom_rp2040.ld  copy_to_ram_custom_rp2350.ld
firmware/test/: duck.h  testpattern_dhgr.h  testpattern_hgr.h  tests.c  tests.h
firmware/util/: dmacopy.c  dmacopy.h
firmware/videx/: videx_vterm.c  videx_vterm.h
libraries/libdvi/: dvi.c  dvi.h  dvi_serialiser.c  dvi_serialiser.h  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.c
tools/: file2header.py  tmdsLores.py  tmds_table_gen.py
